@@ -507,8 +507,10 @@
       <sysproperty key="java.library.path"
        value="${build.native}/lib:${lib.dir}/native/${build.platform}"/>
       <sysproperty key="install.c++.examples" value="${install.c++.examples}"/>
-      <sysproperty key="io.compression.codec.lzo.class"
-		  value="${io.compression.codec.lzo.class}"/>
+      <!-- set io.compression.codec.lzo.class in the child jvm only if it is set -->
+      <syspropertyset dynamic="no">
+         <propertyref name="io.compression.codec.lzo.class"/>
+      </syspropertyset>
       <!-- set compile.c++ in the child jvm only if it is set -->
       <syspropertyset dynamic="no">
          <propertyref name="compile.c++"/>
